Upgrade to Java 15, OpenJFX 15.0.1 Upgrade to Tensorflow 2.3.1 Java API Upgrade to other dependencies to newer versions Migrate preference categories to tabs in Preferences dialog Minor UI consistency fixes and cleanup Update all documentation